<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/RLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
		android:id="@+id/mainpanel"
		android:layout_above="@+id/menupanel"
		android:layout_alignParentLeft="true"
	    >
		<TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/conferenceheading"
		    android:textSize="48dip"
		    android:textColor="#FFFFFF"
		    />
		<TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/currentlyat"
		    android:textSize="14dip"
		    android:textColor="#FFFFFF"
		    />
		<TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/currentconferencename"
		    android:textSize="24dip"
		    android:textColor="#FFFFFF"
		    />
		<Button
			android:id="@+id/viewschedule"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textStyle="bold"
		    android:textColor="#FFFFFF"
	   		android:background="@drawable/button"
	   		android:layout_margin="14dip"
	   		android:text="view schedule"
		/>
		<TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/currentconferencedescription"
		    android:textSize="14dip"
		    android:textColor="#FFFFFF"
		    /> 
	</LinearLayout>
	<include
        layout="@layout/menu"
		/>
</RelativeLayout>	