<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/RLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
		android:id="@+id/mainpanel"
		android:layout_above="@+id/menupanel"
		android:layout_alignParentLeft="true"
	    >
	  	<TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/conferenceheading"
		    android:textSize="48dip"
		    android:textColor="#FFFFFF"
		    />
	   	<TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/newconferenceheading"
		    android:textSize="24dip"
		    android:textColor="#FFFFFF"
		    />
		<TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/conferencewebsite"
		    android:textSize="14dip"
		    android:textColor="#FFFFFF"
		    />
		<EditText
			android:id="@+id/site"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="14dip"
			/>	    
		<Button
			android:id="@+id/go"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textStyle="bold"
		    android:textColor="#FFFFFF"
	   		android:background="@drawable/button"
	   		android:text="Go"
	   		android:layout_margin="14dip"
		/>	 
	</LinearLayout>   
	<include
        layout="@layout/menu"
		/>
</RelativeLayout>
